fix: update about wording and profile info alignment

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -62,6 +62,7 @@ ul.task-list input[type="checkbox"] {
     margin-bottom: 5px;
     margin-top: 5px;
     font-family: "Source Sans 3", Roboto, "Helvetica Neue", Arial, sans-serif;
+    text-align: center;
 
     p {
       display: block;
